--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Action space: Discrete(3)\n",
+      "Observation space: Box([-1.2  -0.07], [0.6  0.07], (2,), float32)\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Action space: {env.action_space}\")\n",
     "print(f\"Observation space: {env.observation_space}\")"
@@ -61,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of actions available: 3\n",
+      "Observation shape: (2,)\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Number of actions available: {env.action_space.n}\")\n",
     "print(f\"Observation shape: {env.observation_space.shape}\")"
@@ -82,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting state: [-0.50611055  0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "# the second return value is an info dictionary, but it doesn't contain anything in this environment\n",
     "starting_state, _ = env.reset() \n",
@@ -103,9 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampled action: 2\n",
+      "Next state: [-0.50524163  0.0008689 ]\n",
+      "Reward: -1.0\n",
+      "Terminated: False\n",
+      "Truncated: False\n"
+     ]
+    }
+   ],
    "source": [
     "action = env.action_space.sample()\n",
     "print(f\"Sampled action: {action}\")\n",
@@ -132,9 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode reward after taking random actions: -200.0\n"
+     ]
+    }
+   ],
    "source": [
     "done = False\n",
     "state, _ = env.reset()\n",
