manque juste update function pour le 3.1 et 3.2

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pip install gymnasium\n",
     "# pip install pygame\n",
+    "# pip install torch\n",
     "\n",
     "import gymnasium as gym\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import pygame\n",
-    "from utils import *"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "import random\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -33,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 355.12it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 331.99it/s]\n"
      ]
     }
    ],
@@ -120,29 +127,28 @@
     "env = gym.make('MountainCar-v0')\n",
     "\n",
     "agent = RandomAgent()\n",
-    "episode_duration= []\n",
+    "episode_durations = []\n",
     "n_episodes = 100\n",
     "for n in tqdm(range(n_episodes)):\n",
     "\n",
     "    done = False\n",
     "    state, _ = env.reset()\n",
-    "    states = []\n",
-    "    episode_reward = 0\n",
+    "    episode_length = 0\n",
     "    \n",
     "    while not done:\n",
-    "        states.append(state)\n",
     "        action = agent.select_action(state)\n",
     "        next_state, reward, terminated, truncated, _ = env.step(action)\n",
     "\n",
     "        state = next_state\n",
+    "        episode_length += 1\n",
     "        done = terminated or truncated\n",
     "\n",
-    "    episode_duration.append(len(states))"
+    "    episode_durations.append(episode_length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +163,7 @@
     }
    ],
    "source": [
-    "plt.scatter(range(n_episodes), episode_duration)\n",
+    "plt.scatter(range(n_episodes), episode_durations)\n",
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Duration')\n",
     "plt.title('Duration per Episode for RandomAgent')\n",
@@ -191,25 +197,286 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DQNAgent:\n",
+    "\n",
+    "    def __init__(self, env, eps = 0.1):\n",
+    "        self.env = env\n",
+    "        self.Q = nn.Sequential(\n",
+    "            nn.Linear(2, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 3),\n",
+    "        )\n",
+    "        self.gamma = 0.99\n",
+    "        self.epsilon = eps\n",
+    "        self.replay_buffer = deque(maxlen=10000) # Using deque for efficient removal of old experiences\n",
+    "        self.batch_size = 64\n",
+    "        self.optimizer = torch.optim.Adam(\n",
+    "            self.Q.parameters(),\n",
+    "            lr = 0.001\n",
+    "        )\n",
+    "        self.t = 0\n",
+    "    \n",
+    "    def observe(self, state, action, next_state, reward):\n",
+    "        \"\"\"Called upon observing a new transition of the environment\"\"\"\n",
+    "        self.replay_buffer.append((state, action, next_state, reward))\n",
+    "    \n",
+    "    def select_action(self, state):\n",
+    "        \"\"\"\" Pick an action from the given state \"\"\"\n",
+    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)  # Convert to tensor and add batch dimension\n",
+    "        Q_values = self.Q(state_tensor)\n",
+    "        action = self.epsilon_greedy(Q_values)\n",
+    "        return action.item()  # Return as Python int\n",
+    "    \n",
+    "    def update(self):\n",
+    "        \"\"\"\" Called after each environment step. \n",
+    "        This is where all the training takes place \"\"\"\n",
+    "        if len(self.replay_buffer) < self.batch_size:\n",
+    "            return  # Not enough samples\n",
+    "        \n",
+    "        transitions_minibatch = random.sample(self.replay_buffer, self.batch_size)\n",
+    "        loss = self.compute_loss(transitions_minibatch)\n",
+    "        self.optimizer.zero_grad()  # Clear gradients before backward pass\n",
+    "        loss.backward()  # Compute gradients\n",
+    "        self.optimizer.step()  # Update parameters\n",
+    "        return loss\n",
+    "\n",
+    "    def compute_loss(self, transitions_minibatch):\n",
+    "        # Aggregate batch loss\n",
+    "        batch_loss = 0\n",
+    "        for state, action, next_state, reward in transitions_minibatch:\n",
+    "            state = torch.tensor(state, dtype=torch.float32)\n",
+    "            next_state = torch.tensor(next_state, dtype=torch.float32)\n",
+    "            reward = torch.tensor(reward, dtype=torch.float32)\n",
+    "            current_q = self.Q(state)[action]\n",
+    "            max_future_q = torch.max(self.Q(next_state)).detach()  # Detach to prevent gradient flow\n",
+    "            target_q = reward + self.gamma * max_future_q\n",
+    "            loss = (target_q - current_q)**2\n",
+    "            batch_loss += loss\n",
+    "        return batch_loss / self.batch_size  # Average the loss\n",
+    "    \n",
+    "    # def update(self): # chatGPT\n",
+    "    #     if len(self.replay_buffer) < self.batch_size:\n",
+    "    #         return  # Not enough samples\n",
+    "        \n",
+    "    #     transitions_minibatch = random.sample(self.replay_buffer, self.batch_size)\n",
+    "    #     states, actions, next_states, rewards = zip(*transitions_minibatch)\n",
+    "    #     states = torch.tensor(states, dtype=torch.float32)\n",
+    "    #     actions = torch.tensor(actions, dtype=torch.long)\n",
+    "    #     next_states = torch.tensor(next_states, dtype=torch.float32)\n",
+    "    #     rewards = torch.tensor(rewards, dtype=torch.float32)\n",
+    "\n",
+    "    #     current_qs = self.Q(states).gather(1, actions.unsqueeze(1)).squeeze(1)\n",
+    "    #     next_qs = self.Q(next_states).max(1)[0].detach()\n",
+    "    #     targets = rewards + self.gamma * next_qs\n",
+    "\n",
+    "    #     loss = F.mse_loss(current_qs, targets)\n",
+    "    #     self.optimizer.zero_grad()\n",
+    "    #     loss.backward()\n",
+    "    #     self.optimizer.step()\n",
+    "    #     return loss\n",
+    "\n",
+    "    def epsilon_greedy(self, Q_val):\n",
+    "        \"\"\" Chooses an epsilon-greedy action starting from a given state and given Q-values \"\"\"\n",
+    "        if np.random.uniform(0, 1) < self.epsilon:\n",
+    "            # with probability epsilon make a random move (exploration)\n",
+    "            return torch.tensor(self.env.action_space.sample()) # env.action_space.sample() \n",
+    "        else:\n",
+    "            # with probability 1-epsilon choose the action with the highest immediate reward (exploitation)\n",
+    "            return torch.argmax(Q_val) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# env = gym.make('MountainCar-v0', render_mode='human')\n",
+    "\n",
+    "# agent = DQNAgent(env, eps=0.1)\n",
+    "\n",
+    "# done = False\n",
+    "# state, _ = env.reset()\n",
+    "# episode_reward = 0\n",
+    "\n",
+    "# while not done:\n",
+    "#     env.render()\n",
+    "#     action = agent.select_action(state)\n",
+    "#     next_state, reward, terminated, truncated, _ = env.step(action)\n",
+    "#     agent.observe(state, action, next_state, reward)\n",
+    "\n",
+    "#     episode_reward += reward\n",
+    "\n",
+    "#     agent.update()\n",
+    "#     state = next_state\n",
+    "#     done = terminated or truncated\n",
+    "\n",
+    "# env.close() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train the DQNAgent for 1000 episodes and report its loss and average cumulative reward per episode.\n",
+    "Does your agent solve the task?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make('MountainCar-v0')\n",
+    "\n",
+    "agent = DQNAgent(env, eps=0.1)\n",
+    "episode_durations = []\n",
+    "episode_rewards = []\n",
+    "episode_losses = []\n",
+    "n_episodes = 1000\n",
+    "for n in tqdm(range(n_episodes)):\n",
+    "\n",
+    "    done = False\n",
+    "    state, _ = env.reset()\n",
+    "    episode_reward = 0\n",
+    "    episode_length = 0\n",
+    "    episode_loss = 0\n",
+    "    \n",
+    "    while not done:\n",
+    "        action = agent.select_action(state)\n",
+    "        next_state, reward, terminated, truncated, _ = env.step(action)\n",
+    "        agent.observe(state, action, next_state, reward)\n",
+    "\n",
+    "        loss = agent.update()\n",
+    "        state = next_state\n",
+    "        episode_length += 1\n",
+    "        episode_loss += loss \n",
+    "        episode_reward += reward\n",
+    "        done = terminated or truncated\n",
+    "\n",
+    "    episode_durations.append(episode_length)\n",
+    "    episode_rewards.append(episode_reward)\n",
+    "    episode_losses.append(episode_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"The average cumulative reward per episode is {sum(episode_rewards)/n_episodes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(range(n_episodes), episode_loss)\n",
+    "plt.xlabel('Episode')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Loss per Episode for DQN Agent without Auxiliary Reward')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DQNAgent:\n",
-    "        \n",
+    "\n",
+    "    def __init__(self, eps = 0.1):\n",
+    "        self.env = env\n",
+    "        self.Q = nn.Sequential(\n",
+    "            nn.Linear(2, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 3),\n",
+    "        )\n",
+    "        self.gamma = 0.99\n",
+    "        self.epsilon = eps\n",
+    "        self.replay_buffer = np.empty(10000)\n",
+    "        self.batch_size = 64\n",
+    "        self.optimizer = torch.optim.Adam(\n",
+    "            self.Q.parameters(),\n",
+    "            lr = 0.001\n",
+    "        )\n",
+    "        self.t = 0\n",
+    "    \n",
     "    def observe(self, state, action, next_state, reward):\n",
-    "        \"\"\"Called upon observing a new transistion of the environment\"\"\"\n",
-    "        pass\n",
+    "        \"\"\"Called upon observing a new transition of the environment\"\"\"\n",
+    "        transition = (state, action, next_state, reward)\n",
+    "        self.replay_buffer = np.insert(self.replay_buffer, 0, transition) # new trans at the beginning of R\n",
+    "        if len(self.replay_buffer) > 10000:\n",
+    "            self.replay_buffer = self.replay_buffer[:10000]\n",
     "    \n",
     "    def select_action(self, state):\n",
-    "        \"\"\"\"Pick an action from the given state\"\"\"\n",
-    "        pass\n",
+    "        \"\"\"\" Pick an action from the given state \"\"\"\n",
+    "        state_tensor = torch.from_numpy(state)\n",
+    "        Q_values = self.Q(state_tensor)\n",
+    "        action = self.epsilon_greedy(Q_values)\n",
+    "        return action\n",
     "    \n",
     "    def update(self):\n",
-    "        \"\"\"\"Called after each environment step. \n",
-    "        This is where all the training takes place\"\"\"\n",
-    "        pass"
+    "        \"\"\"\" Called after each environment step. \n",
+    "        This is where all the training takes place \"\"\"\n",
+    "        \n",
+    "        transitions_minibtach = np.random.choice(self.replay_buffer, self.batch_size, replace=False)\n",
+    "\n",
+    "        loss = self.compute_loss(transitions_minibtach)\n",
+    "        loss.backward()  # Compute gradients\n",
+    "        self.optimizer.step()\n",
+    "        self.t += 1\n",
+    "\n",
+    "    def compute_loss(self, transitions_minibtach):\n",
+    "        loss = 0\n",
+    "        for transition in transitions_minibtach:\n",
+    "            s, a, r, s2 = transition\n",
+    "            loss += (r + self.gamma * torch.max(self.Q(s2)) - self.Q(s))**2\n",
+    "        return loss\n",
+    "\n",
+    "    def epsilon_greedy(self, Q_val):\n",
+    "        \"\"\" Chooses an epsilon-greedy action starting from a given state and given Q-values \"\"\"\n",
+    "        if np.random.uniform(0, 1) < self.epsilon:\n",
+    "            # with probability epsilon make a random move (exploration)\n",
+    "            return env.action_space.sample()\n",
+    "        else:\n",
+    "            # with probability 1-epsilon choose the action with the highest immediate reward (exploitation)\n",
+    "            return torch.argmax(Q_val)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
