--- a/main.ipynb
+++ b/main.ipynb
@@ -18,9 +18,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from collections import deque\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "from collections import deque"
    ]
   },
   {
@@ -91,7 +89,7 @@
     "    action = agent.select_action(state)\n",
     "    next_state, reward, terminated, truncated, _ = env.step(action)\n",
     "\n",
-    "    episode_reward += reward\n",
+    "    episode_reward += float(reward)\n",
     "    states.append(state)\n",
     "    actions.append(action)\n",
     "    rewards.append(reward)\n",
@@ -215,7 +213,7 @@
     "        self.gamma = 0.99\n",
     "        self.t = 0\n",
     "        self.epsilon = 0.9\n",
-    "        self.replay_buffer = deque(maxlen=10000) # Using deque for efficient removal of old experiences\n",
+    "        self.replay_buffer = deque(maxlen=10000) # list-like container with fast appends and pops on either end\n",
     "        self.batch_size = 64\n",
     "        self.optimizer = torch.optim.Adam(\n",
     "            self.Q.parameters(),\n",
@@ -228,10 +226,10 @@
     "    \n",
     "    def select_action(self, state):\n",
     "        \"\"\"\" Pick an action from the given state \"\"\"\n",
-    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)  # Convert to tensor and add batch dimension\n",
+    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)  # convert to tensor + add batch dimension\n",
     "        Q_values = self.Q(state_tensor)\n",
     "        action = self.epsilon_greedy(Q_values)\n",
-    "        return action.item()  # Return as Python int\n",
+    "        return action  \n",
     "    \n",
     "    def update(self): \n",
     "        if len(self.replay_buffer) < self.batch_size:\n",
@@ -256,16 +254,17 @@
     "\n",
     "    def epsilon_greedy(self, Q_val):\n",
     "        \"\"\" Chooses an epsilon-greedy action starting from a given state and given Q-values \"\"\"\n",
-    "        # a = -1/1000 * ln(0.05/0.9) = 0.00289, 0.0015 for 2000\n",
+    "        \n",
     "        if self.epsilon > 0.05:\n",
     "            self.epsilon = 0.9 * np.exp(-0.0017 * self.t)\n",
     "        self.t += 1 \n",
+    "\n",
     "        if np.random.uniform(0, 1) < self.epsilon:\n",
-    "            # with probability epsilon make a random move (exploration)\n",
-    "            return torch.tensor(self.env.action_space.sample()) # env.action_space.sample() \n",
+    "            # random move (exploration)\n",
+    "            return self.env.action_space.sample()\n",
     "        else:\n",
     "            # with probability 1-epsilon choose the action with the highest immediate reward (exploitation)\n",
-    "            return torch.argmax(Q_val) "
+    "            return torch.argmax(Q_val).item() # tensor to int"
    ]
   },
   {
@@ -316,7 +315,7 @@
     "        state = next_state\n",
     "        episode_length += 1\n",
     "        episode_loss += loss \n",
-    "        episode_reward += reward\n",
+    "        episode_reward += float(reward)\n",
     "        done = terminated or truncated\n",
     "\n",
     "    episode_durations.append(episode_length)\n",
@@ -446,13 +445,13 @@
     "        action = agent_DQN_with_AR.select_action(state)\n",
     "        next_state, reward, terminated, truncated, _ = env.step(action)\n",
     "        aux_reward = heuristic_reward(next_state, terminated, episode_length)\n",
-    "        agent_DQN_with_AR.observe(state, action, next_state, reward + aux_reward)\n",
+    "        agent_DQN_with_AR.observe(state, action, next_state, float(reward) + aux_reward)\n",
     "\n",
     "        loss = agent_DQN_with_AR.update()\n",
     "        state = next_state\n",
     "        episode_length += 1\n",
     "        episode_loss += loss \n",
-    "        episode_reward += reward\n",
+    "        episode_reward += float(reward)\n",
     "        episode_aux_reward += aux_reward\n",
     "\n",
     "        done = terminated or truncated\n",
@@ -591,7 +590,7 @@
     "        self.mean += (x - self.mean) / self.n\n",
     "        self.run_var += (x - old_mean) * (x - self.mean)\n",
     "\n",
-    "    @property\n",
+    "    @property # property is easier to call than class function\n",
     "    def variance(self):\n",
     "        return self.run_var / (self.n - 1) if self.n > 1 else 0\n",
     "\n",
@@ -613,7 +612,7 @@
     "\n",
     "    r = (target_val - predicted_val).pow(2)\n",
     "    r_scalar = r.item()\n",
-    "    sqrd_diff_stats.update(r_scalar)  # Update running stats for squared differences # The method is used to extract a number from a tensor when the tensor contains exactly one element\n",
+    "    sqrd_diff_stats.update(r_scalar)  # Update running stats for squared differences \n",
     "\n",
     "    if sqrd_diff_stats.n > 1:\n",
     "        r_norm = (r_scalar - sqrd_diff_stats.mean) / sqrd_diff_stats.std\n",
@@ -644,7 +643,7 @@
     "        self.gamma = 0.99\n",
     "        self.t = 0\n",
     "        self.epsilon = 0.9\n",
-    "        self.replay_buffer = deque(maxlen=10000) # Using deque for efficient removal of old experiences\n",
+    "        self.replay_buffer = deque(maxlen=10000) \n",
     "        self.batch_size = 64\n",
     "        self.Q_optimizer = torch.optim.Adam(\n",
     "            self.Q.parameters(),\n",
@@ -675,10 +674,10 @@
     "    \n",
     "    def select_action(self, state):\n",
     "        \"\"\"\" Pick an action from the given state \"\"\"\n",
-    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)  # Convert to tensor and add batch dimension\n",
+    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)  \n",
     "        Q_values = self.Q(state_tensor)\n",
     "        action = self.epsilon_greedy(Q_values)\n",
-    "        return action  # Return as Python int\n",
+    "        return action  \n",
     "    \n",
     "    def update(self): \n",
     "        if len(self.replay_buffer) < self.batch_size:\n",
@@ -721,8 +720,8 @@
     "            self.epsilon = 0.9 * np.exp(-0.0017 * self.t)\n",
     "        self.t += 1 \n",
     "        if np.random.uniform(0, 1) < self.epsilon:\n",
-    "            # with probability epsilon make a random move (exploration)\n",
-    "            return self.env.action_space.sample() # env.action_space.sample() \n",
+    "            # random move (exploration)\n",
+    "            return self.env.action_space.sample() \n",
     "        else:\n",
     "            # with probability 1-epsilon choose the action with the highest immediate reward (exploitation)\n",
     "            return torch.argmax(Q_val).item()"
@@ -775,7 +774,7 @@
     "        state = next_state\n",
     "        episode_length += 1\n",
     "        episode_loss += Q_loss \n",
-    "        episode_reward += reward\n",
+    "        episode_reward += float(reward)\n",
     "        episode_rnd_reward += rnd_reward\n",
     "\n",
     "        done = terminated or truncated\n",
@@ -893,92 +892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bonus: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DQNAgent:\n",
-    "\n",
-    "    def __init__(self, eps = 0.1):\n",
-    "        self.env = env\n",
-    "        self.Q = nn.Sequential(\n",
-    "            nn.Linear(2, 64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(64, 64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(64, 64),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(64, 3),\n",
-    "        )\n",
-    "        self.gamma = 0.99\n",
-    "        self.epsilon = eps\n",
-    "        self.replay_buffer = np.empty(10000)\n",
-    "        self.batch_size = 64\n",
-    "        self.optimizer = torch.optim.Adam(\n",
-    "            self.Q.parameters(),\n",
-    "            lr = 0.001\n",
-    "        )\n",
-    "        self.t = 0\n",
-    "    \n",
-    "    def observe(self, state, action, next_state, reward):\n",
-    "        \"\"\"Called upon observing a new transition of the environment\"\"\"\n",
-    "        transition = (state, action, next_state, reward)\n",
-    "        self.replay_buffer = np.insert(self.replay_buffer, 0, transition) # new trans at the beginning of R\n",
-    "        if len(self.replay_buffer) > 10000:\n",
-    "            self.replay_buffer = self.replay_buffer[:10000]\n",
-    "    \n",
-    "    def select_action(self, state):\n",
-    "        \"\"\"\" Pick an action from the given state \"\"\"\n",
-    "        state_tensor = torch.from_numpy(state)\n",
-    "        Q_values = self.Q(state_tensor)\n",
-    "        action = self.epsilon_greedy(Q_values)\n",
-    "        return action\n",
-    "    \n",
-    "    def update(self):\n",
-    "        \"\"\"\" Called after each environment step. \n",
-    "        This is where all the training takes place \"\"\"\n",
-    "        \n",
-    "        transitions_minibtach = np.random.choice(self.replay_buffer, self.batch_size, replace=False)\n",
-    "\n",
-    "        loss = self.compute_loss(transitions_minibtach)\n",
-    "        loss.backward()  # Compute gradients\n",
-    "        self.optimizer.step()\n",
-    "        self.t += 1\n",
-    "\n",
-    "    def compute_loss(self, transitions_minibtach):\n",
-    "        loss = 0\n",
-    "        for transition in transitions_minibtach:\n",
-    "            s, a, r, s2 = transition\n",
-    "            loss += (r + self.gamma * torch.max(self.Q(s2)) - self.Q(s))**2\n",
-    "        return loss\n",
-    "\n",
-    "    def epsilon_greedy(self, Q_val):\n",
-    "        \"\"\" Chooses an epsilon-greedy action starting from a given state and given Q-values \"\"\"\n",
-    "        if np.random.uniform(0, 1) < self.epsilon:\n",
-    "            # with probability epsilon make a random move (exploration)\n",
-    "            return env.action_space.sample()\n",
-    "        else:\n",
-    "            # with probability 1-epsilon choose the action with the highest immediate reward (exploitation)\n",
-    "            return torch.argmax(Q_val)"
+    "## Additional stuff"
    ]
   },
   {
